# gpu_programming_model

./: .gitignore  .gitmodules  README.md  speed_comparison.jl
julia/: flux.jl  gemm.jl  gemv.jl  main.jl
kokkos/: CMakeLists.txt  blas_gemv.cpp  flux.cpp  hand_gemv.cpp
kokkos/build_cuda/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix_multiplication
kokkos/build_cuda/cmake_packages/Kokkos/: KokkosConfig.cmake  KokkosConfigCommon.cmake  KokkosTargets.cmake
kokkos/build_cuda/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfigVersion.cmake  KokkosCore_Config_DeclareBackend.hpp  KokkosCore_Config_FwdBackend.hpp  KokkosCore_config.h  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/algorithms/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/containers/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/core/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/example/: CTestTestfile.cmake  Makefile
kokkos/build_cuda/kokkos/simd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
kokkos/build_cuda/kokkos/temp/: KokkosCore_Config_DeclareBackend.hpp.work  KokkosCore_Config_FwdBackend.hpp.work
(+4 files in other folders)
